# ft_dslr

./: .gitignore  LICENSE  Makefile  README.md  describe.py  fix.py  histogram.py  main.py  pair_plot.py  pyproject.toml  requirements-dev.txt  requirements.txt  scatter_plot.py  setup.cfg
.github/workflows/: developement.yml
data/: logistic.ini  poids.json
ft_dslr/: __init__.py  describe.ipynb  description.py  histogram.ipynb  histogram.py  pair_plot.ipynb  pair_plot.py  scatter_plot.ipynb  setup.json
ft_dslr/describe/: __init__.py  describe.py
ft_dslr/histogram/: __init__.py  histogram.py
ft_dslr/logistic_regression/: __init__.py  gradient_descent.py  logreg_predict.py  logreg_train.py  new_gd.py  stochastic_gradient_descent.py  train.py
ft_dslr/logistic_regression/batch_selectors/: __init__.py  mandatory_batch.py  mini_batch.py  random_step_batch.py  stochastic_batch.py
ft_dslr/logistic_regression/tools/: __init__.py  config.py  data.py  format_csv.py  model.py  norm.py  plot.py  sigmoid.py  split.py
ft_dslr/pair_plot/: __init__.py  pair_plot.py
ft_dslr/regression_tools/: clean_datas.ipynb  interpret.ipynb  understand_goal_logistical.ipynb
ft_dslr/scatter_plot/: __init__.py  scatter_plot.py
ft_dslr/tools/: __init__.py  open_csv.py
models/: logistic.ini
notebooks/: describe.ipynb  histogram.ipynb  logistic_regression.ipynb  pair_plot.ipynb
srcs/descibe/: describe.ipynb
srcs/describe/: describe.ipynb  describe.py
srcs/histogram/: histogram.ipynb  histogram.py
srcs/logistic_regression/: gradient_descent.py  logistic_regression.ipynb  logreg_predict.py  logreg_train.py  train.py
srcs/pair_plot/: pair_plot.ipynb  pair_plot.py
srcs/scatter_plot/: scatter_plot.ipynb  scatter_plot.py  tools.py
(+5 files in other folders)
