[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ft_dslr"
version = "0.0.1"
description = "Topic proposed by the 42AI association. Discover Data Science through this project in the reconstruction of the Hogwarts Sorting Hat! Please note that this is not a topic about cameras."
authors = [
  { name = "Leo Farina and Nolan Skiba" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["ft_dslr"]
force_sort_within_sections = true
